fixed the mobile header spacing issue

--- a/app/assets/stylesheets/controllers/shared-layout.sass
+++ b/app/assets/stylesheets/controllers/shared-layout.sass
@@ -16,6 +16,7 @@
   background-color: #e2e2e2
   @media (max-width: $breakpoint-tablet)
     background-color: white
+    margin-top: 50px
 
 .section
   display: -webkit-box
@@ -37,7 +38,7 @@
     -ms-flex: 1
     flex: 1
     @media (max-width: $breakpoint-tablet)
-      margin-top: 50px
+      //margin-top: 50px
 
 
 .container
@@ -71,7 +72,7 @@
     padding-top: 0px
     padding-right: 24px
     padding-left: 24px
-    border-bottom: 1px solid rgba(0, 0, 0, 0.15)
+    //border-bottom: 1px solid rgba(0, 0, 0, 0.15)
     background-color: #fff
     -webkit-box-flex: 0
     -webkit-flex: 0 auto
